# rostam-media

./: .gitignore  CMakeLists.txt  README.md  README_PER.md  build-appimage.sh
.github/workflows/: continuous.yaml  release.yaml  windows-release.yaml  windows.yaml
AppImage/: PKGBUILD  rostam-media-anylinux.sh
resource/: dark.txt
resource/desktop/: rostam-media.desktop
src/: about_dialog.cppm  cross_platform.cppm  main.cpp  master_window.cppm  master_window_impl.cppm  version.cppm.in
src/core/: rostam.cpp  rostam.cppm
src/costom_widgets/: better_checkbox.cppm  logo.cppm  modal_dialog.cppm  modal_messagebox.cppm  modal_overlay.cppm
